# Exercises_CPP_ScientificComputing_PhD

./: .gitignore  CMakeLists.txt  HP_CH1.txt  HarryPotter.txt  HungerGames.txt  run_all.sh  test.txt
Exercise1/: .gitignore
Exercise1/include/: Zipf.hh
Exercise1/matlab/: fit_zipf.m
Exercise1/output/: HP_4.csv  HP_5.csv
Exercise1/src/: Zipf.cpp  main.cpp
Exercise2/: CMakeLists.txt  run_all.sh
Exercise2/docs/html/: _exercise2_8cpp.html  _exercise2_8cpp.js  _exercise2_8hh.html  _exercise2_8hh.js  _exercise2_8hh_source.html  _exercise2__main_8cpp.html  _exercise2__main_8cpp.js  annotated.html  annotated_dup.js  class_exercise2_1_1_b_v_p___problem-members.html  class_exercise2_1_1_b_v_p___problem.html  class_exercise2_1_1_b_v_p___problem.js  class_exercise2_1_1_b_v_p___problem__base-members.html  class_exercise2_1_1_b_v_p___problem__base.html  class_exercise2_1_1_b_v_p___problem__base.js  class_exercise2_1_1_block___tridiagonal-members.html  class_exercise2_1_1_block___tridiagonal.html  class_exercise2_1_1_block___tridiagonal.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  hierarchy.html  hierarchy.js  index.html  menudata.js  namespace_exercise2.html  namespace_exercise2.js  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  (+8 more)
Exercise2/docs/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_c.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  files_0.js  functions_1.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_d.js  namespaces_0.js  searchdata.js  typedefs_0.js  typedefs_2.js  typedefs_3.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
Exercise2/include/: BVP.hh  Exercise2.hh
Exercise2/matlab/: plot_convergence.m
Exercise2/output/: convergence.csv
Exercise2/src/: BVP.cpp  Exercise2.cpp  Exercise2_main.cpp
Exercise3/: CMakeLists.txt  run_all.sh
Exercise3/docs/html/: _exercise3_8hh.html  _exercise3_8hh.js  _exercise3_8hh_source.html  _exercise3__main_8cpp.html  _exercise3__view_8cpp.html  _exercise3__view_8cpp.js  annotated.html  annotated_dup.js  class_exercise3_1_1_b_v_p___problem-members.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  hierarchy.html  hierarchy.js  index.html  menudata.js  namespace_exercise3.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js  struct_exercise3_1_1_experiment___result.html
Exercise3/include/: Exercise3.hh
Exercise3/matlab/: plot_convergence.m
Exercise3/output/: convergence_map.csv
Exercise3/src/: Exercise3_main.cpp  Exercise3_map.cpp  Exercise3_view.cpp
Exercise4/: CMakeLists.txt  run_all.sh
Exercise4/docs/html/: _exercise3_8cpp.html  _exercise3_8cpp.js  _exercise3__main_8cpp.js  _exercise3__map_8cpp.html  _exercise3__map_8cpp.js  _newton_8hh.html  _newton_8hh.js  _newton_8hh_source.html  annotated.html  annotated_dup.js  class_a_d_1_1_dual-members.html  class_problem.html  (+53 more)
Exercise4/include/: Newton.hh
Exercise4/output/: convergence.csv  convergence_copy.csv  convergence_view.csv
Exercise4/src/: test1.cpp
Final_Project/: .gitignore  CMakeLists.txt  run_all.sh
Final_Project/docs/: mainpage.dox
Final_Project/include/: CSC.hh  CSC_RL.hh  CSC_RL_Case.hh  CSC_RL_Model.hh  Equilibrium.hh  Newton.hh  ODE4.hh  SimulationConfig.hh  dual.hh
Final_Project/results/: Plot_CSC.asv  Plot_CSC.m
Final_Project/src/: CSC.cpp  CSC_RL.cc  CSC_RL_Case.cc  Equilibrium.cc  ODE4.cc  main.cpp
include/: Zipf.hh
input/: HP_1.txt  HP_2.txt  HP_3.txt  HP_4.txt  HP_5.txt  HP_6.txt  HP_7.txt
matlab/: fit_zipf.m  plot_zipf.m
output/: DivinyComedy.csv  HP_1.csv  HP_2.csv  HP_3.csv  HP_6.csv  HP_7.csv  HarryPotter.csv  HungerGames.csv  zipf_fit_results.csv
src/: Zipf.cpp  main.cpp
(+302 files in other folders)
